Fix alignment for leader text of timeline showcase

--- a/app/assets/stylesheets/home/timeline_events.scss
+++ b/app/assets/stylesheets/home/timeline_events.scss
@@ -79,6 +79,7 @@ a.timeline-event-link {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
 }
 
 .btn-playbook-timeline {
